Fix market summary layout bug
Due to change made in the default line-height of spans in the latest
market update

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -758,3 +758,7 @@ input[type=checkbox].es_dlc_selection:checked + label {
 #es_background {
 	width: 463px;
 }
+.es_market_summary_item {
+	float: right;
+	line-height: inherit !important;
+}
